tests/adapters/snapshots/main__adapters__tool_simulation__bracket_tools_parse_hyphenated_name.snap
---
source: tests/adapters/tool_simulation.rs
expression: "&call"
---
ParsedToolCall {
    name: "mcp__mcp__searxng-search",
    args: {
        "query": String("\\\"rust\\\""),
    },
}
